fix: spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -446,7 +446,3 @@ h4 {
 .contact-form-phone {
     padding: 0 20px;
 }
-
-.contact-form-submit {
-    margin-bottom: 100px;
-}
